Add some verb conjugations

--- a/app/src/main/res/xml/conjugations.xml
+++ b/app/src/main/res/xml/conjugations.xml
@@ -4862,109 +4862,418 @@
         id          = "50"
         term        = ""
         inf_pr      = "vouloir"
-        inf_pa      = ""
-        pa_pr       = ""
-        pa_pa1      = ""
-        pa_pa2      = ""
-        ge_pr       = ""
-        ge_pa       = ""
-        im_pr_t     = ""
-        im_pr_n     = ""
-        im_pr_v     = ""
-        im_pa_t     = ""
-        im_pa_n     = ""
-        im_pa_v     = ""
+        inf_pa      = "avoir voulu"
+        pa_pr       = "voulant"
+        pa_pa1      = "voulu (u, ue, us, ues)"
+        pa_pa2      = "ayant voulu"
+        ge_pr       = "en voulant"
+        ge_pa       = "en ayant voulu"
+        im_pr_t     = "veuille / veux"
+        im_pr_n     = "veuillons / voulons"
+        im_pr_v     = "veuillez / voulez"
+        im_pa_t     = "aie voulu"
+        im_pa_n     = "ayons voulu"
+        im_pa_v     = "ayez voulu"
 
-        in_pr_j     = ""
-        in_pr_t     = ""
-        in_pr_il    = ""
-        in_pr_n     = ""
-        in_pr_v     = ""
-        in_pr_ils   = ""
-        in_pc_j     = "ai "
-        in_pc_t     = "as "
-        in_pc_il    = "a "
-        in_pc_n     = "avons "
-        in_pc_v     = "avez "
-        in_pc_ils   = "ont "
-        in_im_j     = ""
-        in_im_t     = ""
-        in_im_il    = ""
-        in_im_n     = ""
-        in_im_v     = ""
-        in_im_ils   = ""
-        in_pqp_j    = "avais "
-        in_pqp_t    = "avais "
-        in_pqp_il   = "avait "
-        in_pqp_n    = "avions "
-        in_pqp_v    = "aviez "
-        in_pqp_ils  = "avaient "
-        in_ps_j     = ""
-        in_ps_t     = ""
-        in_ps_il    = ""
-        in_ps_n     = ""
-        in_ps_v     = ""
-        in_ps_ils   = ""
-        in_pa_j     = "eus "
-        in_pa_t     = "eus "
-        in_pa_il    = "eut "
-        in_pa_n     = "eûmes "
-        in_pa_v     = "eûtes "
-        in_pa_ils   = "eurent "
-        in_fs_j     = ""
-        in_fs_t     = ""
-        in_fs_il    = ""
-        in_fs_n     = ""
-        in_fs_v     = ""
-        in_fs_ils   = ""
-        in_fa_j     = "aurai "
-        in_fa_t     = "auras "
-        in_fa_il    = "aura "
-        in_fa_n     = "aurons "
-        in_fa_v     = "aurez "
-        in_fa_ils   = "auront "
+        in_pr_j     = "veux"
+        in_pr_t     = "veux"
+        in_pr_il    = "veut"
+        in_pr_n     = "voulons"
+        in_pr_v     = "voulez"
+        in_pr_ils   = "veulent"
+        in_pc_j     = "ai voulu"
+        in_pc_t     = "as voulu"
+        in_pc_il    = "a voulu"
+        in_pc_n     = "avons voulu"
+        in_pc_v     = "avez voulu"
+        in_pc_ils   = "ont voulu"
+        in_im_j     = "voulais"
+        in_im_t     = "voulais"
+        in_im_il    = "voulait"
+        in_im_n     = "voulions"
+        in_im_v     = "vouliez"
+        in_im_ils   = "voulaient"
+        in_pqp_j    = "avais voulu"
+        in_pqp_t    = "avais voulu"
+        in_pqp_il   = "avait voulu"
+        in_pqp_n    = "avions voulu"
+        in_pqp_v    = "aviez voulu"
+        in_pqp_ils  = "avaient voulu"
+        in_ps_j     = "voulus"
+        in_ps_t     = "voulus"
+        in_ps_il    = "voulut"
+        in_ps_n     = "voulûmes"
+        in_ps_v     = "voulûtes"
+        in_ps_ils   = "voulurent"
+        in_pa_j     = "eus voulu"
+        in_pa_t     = "eus voulu"
+        in_pa_il    = "eut voulu"
+        in_pa_n     = "eûmes voulu"
+        in_pa_v     = "eûtes voulu"
+        in_pa_ils   = "eurent voulu"
+        in_fs_j     = "voudrai"
+        in_fs_t     = "voudras"
+        in_fs_il    = "voudra"
+        in_fs_n     = "voudrons"
+        in_fs_v     = "voudrez"
+        in_fs_ils   = "voudront"
+        in_fa_j     = "aurai voulu"
+        in_fa_t     = "auras voulu"
+        in_fa_il    = "aura voulu"
+        in_fa_n     = "aurons voulu"
+        in_fa_v     = "aurez voulu"
+        in_fa_ils   = "auront voulu"
 
-        su_pr_j     = ""
-        su_pr_t     = ""
-        su_pr_il    = ""
-        su_pr_n     = ""
-        su_pr_v     = ""
-        su_pr_ils   = ""
-        su_pa_j     = "aie "
-        su_pa_t     = "aies "
-        su_pa_il    = "ait "
-        su_pa_n     = "ayons "
-        su_pa_v     = "ayez "
-        su_pa_ils   = "aient "
-        su_im_j     = ""
-        su_im_t     = ""
-        su_im_il    = ""
-        su_im_n     = ""
-        su_im_v     = ""
-        su_im_ils   = ""
-        su_pqp_j    = "eusse "
-        su_pqp_t    = "eusses "
-        su_pqp_il   = "eût "
-        su_pqp_n    = "eussions "
-        su_pqp_v    = "eussiez "
-        su_pqp_ils  = "eussent "
+        su_pr_j     = "veuille"
+        su_pr_t     = "veuilles"
+        su_pr_il    = "veuille"
+        su_pr_n     = "voulions"
+        su_pr_v     = "vouliez"
+        su_pr_ils   = "veuillent"
+        su_pa_j     = "aie voulu"
+        su_pa_t     = "aies voulu"
+        su_pa_il    = "ait voulu"
+        su_pa_n     = "ayons voulu"
+        su_pa_v     = "ayez voulu"
+        su_pa_ils   = "aient voulu"
+        su_im_j     = "voulusse"
+        su_im_t     = "voulusses"
+        su_im_il    = "voulût"
+        su_im_n     = "voulussions"
+        su_im_v     = "voulussiez"
+        su_im_ils   = "voulussent"
+        su_pqp_j    = "eusse voulu"
+        su_pqp_t    = "eusses voulu"
+        su_pqp_il   = "eût voulu"
+        su_pqp_n    = "eussions voulu"
+        su_pqp_v    = "eussiez voulu"
+        su_pqp_ils  = "eussent voulu"
 
-        co_pr_j     = ""
-        co_pr_t     = ""
-        co_pr_il    = ""
-        co_pr_n     = ""
-        co_pr_v     = ""
-        co_pr_ils   = ""
-        co_pa_j     = "aurais "
-        co_pa_t     = "aurais "
-        co_pa_il    = "aurait "
-        co_pa_n     = "aurions "
-        co_pa_v     = "auriez "
-        co_pa_ils   = "auraient " />
+        co_pr_j     = "voudrais"
+        co_pr_t     = "voudrais"
+        co_pr_il    = "voudrait"
+        co_pr_n     = "voudrions"
+        co_pr_v     = "voudriez"
+        co_pr_ils   = "voudraient"
+        co_pa_j     = "aurais voulu"
+        co_pa_t     = "aurais voulu"
+        co_pa_il    = "aurait voulu"
+        co_pa_n     = "aurions voulu"
+        co_pa_v     = "auriez voulu"
+        co_pa_ils   = "auraient voulu" />
     <conjugation
         id          = "51"
         term        = ""
         inf_pr      = "asseoir"
+        inf_pa      = "avoir assis"
+        pa_pr       = "asseyant"
+        pa_pa1      = "assis (s, se, s, ses)"
+        pa_pa2      = "ayant assis"
+        ge_pr       = "en asseyant"
+        ge_pa       = "en ayant assis"
+        im_pr_t     = "assieds / assois"
+        im_pr_n     = "asseyons / assoyons"
+        im_pr_v     = "asseyez / assoyez"
+        im_pa_t     = "aie assis"
+        im_pa_n     = "ayons assis"
+        im_pa_v     = "ayez assis"
+
+        in_pr_j     = "assieds / assois"
+        in_pr_t     = "assieds / assois"
+        in_pr_il    = "assied / assoit"
+        in_pr_n     = "asseyons / assoyons"
+        in_pr_v     = "asseyez / assoyez"
+        in_pr_ils   = "asseyent / assoient"
+        in_pc_j     = "ai assis"
+        in_pc_t     = "as assis"
+        in_pc_il    = "a assis"
+        in_pc_n     = "avons assis"
+        in_pc_v     = "avez assis"
+        in_pc_ils   = "ont assis"
+        in_im_j     = "asseyais / assoyais"
+        in_im_t     = "asseyais / assoyais"
+        in_im_il    = "asseyait / assoyait"
+        in_im_n     = "asseyions / assoyions"
+        in_im_v     = "asseyiez / assoyiez"
+        in_im_ils   = "asseyaient / assoyaient"
+        in_pqp_j    = "avais assis"
+        in_pqp_t    = "avais assis"
+        in_pqp_il   = "avait assis"
+        in_pqp_n    = "avions assis"
+        in_pqp_v    = "aviez assis"
+        in_pqp_ils  = "avaient assis"
+        in_ps_j     = "assis"
+        in_ps_t     = "assis"
+        in_ps_il    = "assit"
+        in_ps_n     = "assîmes"
+        in_ps_v     = "assîtes"
+        in_ps_ils   = "assirent"
+        in_pa_j     = "eus assis"
+        in_pa_t     = "eus assis"
+        in_pa_il    = "eut assis"
+        in_pa_n     = "eûmes assis"
+        in_pa_v     = "eûtes assis"
+        in_pa_ils   = "eurent assis"
+        in_fs_j     = "assiérai / assoirai"
+        in_fs_t     = "assiéras / assoiras"
+        in_fs_il    = "assiéra / assoira"
+        in_fs_n     = "assiérons / assoirons"
+        in_fs_v     = "assiérez / assoirez"
+        in_fs_ils   = "assiéront / assoiront"
+        in_fa_j     = "aurai assis"
+        in_fa_t     = "auras assis"
+        in_fa_il    = "aura assis"
+        in_fa_n     = "aurons assis"
+        in_fa_v     = "aurez assis"
+        in_fa_ils   = "auront assis"
+
+        su_pr_j     = "asseye / assoie"
+        su_pr_t     = "asseyes / assoies"
+        su_pr_il    = "asseye / assoie"
+        su_pr_n     = "asseyions / assoyions"
+        su_pr_v     = "asseyiez / assoyiez"
+        su_pr_ils   = "asseyent / assoient"
+        su_pa_j     = "aie assis"
+        su_pa_t     = "aies assis"
+        su_pa_il    = "ait assis"
+        su_pa_n     = "ayons assis"
+        su_pa_v     = "ayez assis"
+        su_pa_ils   = "aient assis"
+        su_im_j     = "assisse"
+        su_im_t     = "assisses"
+        su_im_il    = "assît"
+        su_im_n     = "assissions"
+        su_im_v     = "assissiez"
+        su_im_ils   = "assissent"
+        su_pqp_j    = "eusse assis"
+        su_pqp_t    = "eusses assis"
+        su_pqp_il   = "eût assis"
+        su_pqp_n    = "eussions assis"
+        su_pqp_v    = "eussiez assis"
+        su_pqp_ils  = "eussent assis"
+
+        co_pr_j     = "assiérais / assoirais"
+        co_pr_t     = "assiérais / assoirais"
+        co_pr_il    = "assiérait / assoirait"
+        co_pr_n     = "assiérions / assoirions"
+        co_pr_v     = "assiériez / assoiriez"
+        co_pr_ils   = "assiéraient / assoiraient"
+        co_pa_j     = "aurais assis"
+        co_pa_t     = "aurais assis"
+        co_pa_il    = "aurait assis"
+        co_pa_n     = "aurions assis"
+        co_pa_v     = "auriez assis"
+        co_pa_ils   = "auraient assis" />
+    <conjugation
+        id          = "52"
+        term        = ""
+        inf_pr      = "seoir"
+        inf_pa      = "-"
+        pa_pr       = "séant"
+        pa_pa1      = "-"
+        pa_pa2      = "-"
+        ge_pr       = "en séant (en seyant)"
+        ge_pa       = "-"
+        im_pr_t     = "-"
+        im_pr_n     = "-"
+        im_pr_v     = "-"
+        im_pa_t     = "-"
+        im_pa_n     = "-"
+        im_pa_v     = "-"
+
+        in_pr_j     = "-"
+        in_pr_t     = "-"
+        in_pr_il    = "sied"
+        in_pr_n     = "-"
+        in_pr_v     = "-"
+        in_pr_ils   = "siéent"
+        in_pc_j     = "-"
+        in_pc_t     = "-"
+        in_pc_il    = "-"
+        in_pc_n     = "-"
+        in_pc_v     = "-"
+        in_pc_ils   = "-"
+        in_im_j     = "-"
+        in_im_t     = "-"
+        in_im_il    = "seyait"
+        in_im_n     = "-"
+        in_im_v     = "-"
+        in_im_ils   = "seyaient"
+        in_pqp_j    = "-"
+        in_pqp_t    = "-"
+        in_pqp_il   = "-"
+        in_pqp_n    = "-"
+        in_pqp_v    = "-"
+        in_pqp_ils  = "-"
+        in_ps_j     = "-"
+        in_ps_t     = "-"
+        in_ps_il    = "-"
+        in_ps_n     = "-"
+        in_ps_v     = "-"
+        in_ps_ils   = "-"
+        in_pa_j     = "-"
+        in_pa_t     = "-"
+        in_pa_il    = "-"
+        in_pa_n     = "-"
+        in_pa_v     = "-"
+        in_pa_ils   = "-"
+        in_fs_j     = "-"
+        in_fs_t     = "-"
+        in_fs_il    = "siéra"
+        in_fs_n     = "-"
+        in_fs_v     = "-"
+        in_fs_ils   = "siéront"
+        in_fa_j     = "-"
+        in_fa_t     = "-"
+        in_fa_il    = "-"
+        in_fa_n     = "-"
+        in_fa_v     = "-"
+        in_fa_ils   = "-"
+
+        su_pr_j     = "-"
+        su_pr_t     = "-"
+        su_pr_il    = "siée"
+        su_pr_n     = "-"
+        su_pr_v     = "-"
+        su_pr_ils   = "siéent"
+        su_pa_j     = "-"
+        su_pa_t     = "-"
+        su_pa_il    = "-"
+        su_pa_n     = "-"
+        su_pa_v     = "-"
+        su_pa_ils   = "-"
+        su_im_j     = "-"
+        su_im_t     = "-"
+        su_im_il    = "-"
+        su_im_n     = "-"
+        su_im_v     = "-"
+        su_im_ils   = "-"
+        su_pqp_j    = "-"
+        su_pqp_t    = "-"
+        su_pqp_il   = "-"
+        su_pqp_n    = "-"
+        su_pqp_v    = "-"
+        su_pqp_ils  = "-"
+
+        co_pr_j     = "-"
+        co_pr_t     = "-"
+        co_pr_il    = "siérait"
+        co_pr_n     = "-"
+        co_pr_v     = "-"
+        co_pr_ils   = "siéraient"
+        co_pa_j     = "-"
+        co_pa_t     = "-"
+        co_pa_il    = "-"
+        co_pa_n     = "-"
+        co_pa_v     = "-"
+        co_pa_ils   = "-" />
+    <conjugation
+        id          = "53"
+        term        = ""
+        inf_pr      = "messeoir"
+        inf_pa      = ""
+        pa_pr       = ""
+        pa_pa1      = ""
+        pa_pa2      = ""
+        ge_pr       = ""
+        ge_pa       = ""
+        im_pr_t     = ""
+        im_pr_n     = ""
+        im_pr_v     = ""
+        im_pa_t     = ""
+        im_pa_n     = ""
+        im_pa_v     = ""
+
+        in_pr_j     = ""
+        in_pr_t     = ""
+        in_pr_il    = ""
+        in_pr_n     = ""
+        in_pr_v     = ""
+        in_pr_ils   = ""
+        in_pc_j     = ""
+        in_pc_t     = ""
+        in_pc_il    = ""
+        in_pc_n     = ""
+        in_pc_v     = ""
+        in_pc_ils   = ""
+        in_im_j     = ""
+        in_im_t     = ""
+        in_im_il    = ""
+        in_im_n     = ""
+        in_im_v     = ""
+        in_im_ils   = ""
+        in_pqp_j    = ""
+        in_pqp_t    = ""
+        in_pqp_il   = ""
+        in_pqp_n    = ""
+        in_pqp_v    = ""
+        in_pqp_ils  = ""
+        in_ps_j     = ""
+        in_ps_t     = ""
+        in_ps_il    = ""
+        in_ps_n     = ""
+        in_ps_v     = ""
+        in_ps_ils   = ""
+        in_pa_j     = ""
+        in_pa_t     = ""
+        in_pa_il    = ""
+        in_pa_n     = ""
+        in_pa_v     = ""
+        in_pa_ils   = ""
+        in_fs_j     = ""
+        in_fs_t     = ""
+        in_fs_il    = ""
+        in_fs_n     = ""
+        in_fs_v     = ""
+        in_fs_ils   = ""
+        in_fa_j     = ""
+        in_fa_t     = ""
+        in_fa_il    = ""
+        in_fa_n     = ""
+        in_fa_v     = ""
+        in_fa_ils   = ""
+
+        su_pr_j     = ""
+        su_pr_t     = ""
+        su_pr_il    = ""
+        su_pr_n     = ""
+        su_pr_v     = ""
+        su_pr_ils   = ""
+        su_pa_j     = ""
+        su_pa_t     = ""
+        su_pa_il    = ""
+        su_pa_n     = ""
+        su_pa_v     = ""
+        su_pa_ils   = ""
+        su_im_j     = ""
+        su_im_t     = ""
+        su_im_il    = ""
+        su_im_n     = ""
+        su_im_v     = ""
+        su_im_ils   = ""
+        su_pqp_j    = ""
+        su_pqp_t    = ""
+        su_pqp_il   = ""
+        su_pqp_n    = ""
+        su_pqp_v    = ""
+        su_pqp_ils  = ""
+
+        co_pr_j     = ""
+        co_pr_t     = ""
+        co_pr_il    = ""
+        co_pr_n     = ""
+        co_pr_v     = ""
+        co_pr_ils   = ""
+        co_pa_j     = ""
+        co_pa_t     = ""
+        co_pa_il    = ""
+        co_pa_n     = ""
+        co_pa_v     = ""
+        co_pa_ils   = "" />
+    <conjugation
+        id          = "54"
+        term        = ""
+        inf_pr      = "surseoir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -5065,9 +5374,9 @@
         co_pa_v     = "auriez "
         co_pa_ils   = "auraient " />
     <conjugation
-        id          = "52"
+        id          = "55"
         term        = ""
-        inf_pr      = "asseoir"
+        inf_pr      = "choir"
         inf_pa      = ""
         pa_pr       = ""
         pa_pa1      = ""
@@ -5167,5 +5476,108 @@
         co_pa_n     = "aurions "
         co_pa_v     = "auriez "
         co_pa_ils   = "auraient " />
+    <conjugation
+        id          = "56"
+        term        = ""
+        inf_pr      = ""
+        inf_pa      = ""
+        pa_pr       = ""
+        pa_pa1      = ""
+        pa_pa2      = ""
+        ge_pr       = ""
+        ge_pa       = ""
+        im_pr_t     = ""
+        im_pr_n     = ""
+        im_pr_v     = ""
+        im_pa_t     = ""
+        im_pa_n     = ""
+        im_pa_v     = ""
+
+        in_pr_j     = ""
+        in_pr_t     = ""
+        in_pr_il    = ""
+        in_pr_n     = ""
+        in_pr_v     = ""
+        in_pr_ils   = ""
+        in_pc_j     = ""
+        in_pc_t     = ""
+        in_pc_il    = ""
+        in_pc_n     = ""
+        in_pc_v     = ""
+        in_pc_ils   = ""
+        in_im_j     = ""
+        in_im_t     = ""
+        in_im_il    = ""
+        in_im_n     = ""
+        in_im_v     = ""
+        in_im_ils   = ""
+        in_pqp_j    = ""
+        in_pqp_t    = ""
+        in_pqp_il   = ""
+        in_pqp_n    = ""
+        in_pqp_v    = ""
+        in_pqp_ils  = ""
+        in_ps_j     = ""
+        in_ps_t     = ""
+        in_ps_il    = ""
+        in_ps_n     = ""
+        in_ps_v     = ""
+        in_ps_ils   = ""
+        in_pa_j     = ""
+        in_pa_t     = ""
+        in_pa_il    = ""
+        in_pa_n     = ""
+        in_pa_v     = ""
+        in_pa_ils   = ""
+        in_fs_j     = ""
+        in_fs_t     = ""
+        in_fs_il    = ""
+        in_fs_n     = ""
+        in_fs_v     = ""
+        in_fs_ils   = ""
+        in_fa_j     = ""
+        in_fa_t     = ""
+        in_fa_il    = ""
+        in_fa_n     = ""
+        in_fa_v     = ""
+        in_fa_ils   = ""
+
+        su_pr_j     = ""
+        su_pr_t     = ""
+        su_pr_il    = ""
+        su_pr_n     = ""
+        su_pr_v     = ""
+        su_pr_ils   = ""
+        su_pa_j     = ""
+        su_pa_t     = ""
+        su_pa_il    = ""
+        su_pa_n     = ""
+        su_pa_v     = ""
+        su_pa_ils   = ""
+        su_im_j     = ""
+        su_im_t     = ""
+        su_im_il    = ""
+        su_im_n     = ""
+        su_im_v     = ""
+        su_im_ils   = ""
+        su_pqp_j    = ""
+        su_pqp_t    = ""
+        su_pqp_il   = ""
+        su_pqp_n    = ""
+        su_pqp_v    = ""
+        su_pqp_ils  = ""
+
+        co_pr_j     = ""
+        co_pr_t     = ""
+        co_pr_il    = ""
+        co_pr_n     = ""
+        co_pr_v     = ""
+        co_pr_ils   = ""
+        co_pa_j     = ""
+        co_pa_t     = ""
+        co_pa_il    = ""
+        co_pa_n     = ""
+        co_pa_v     = ""
+        co_pa_ils   = "" />
 
 </conjugations>
