Add some verb conjugations

--- a/app/src/main/res/xml/conjugations.xml
+++ b/app/src/main/res/xml/conjugations.xml
@@ -7848,209 +7848,209 @@
     <conjugation
         id          = "79"
         term        = ""
-        inf_pr      = ""
-        inf_pa      = ""
-        pa_pr       = ""
-        pa_pa1      = ""
-        pa_pa2      = ""
-        ge_pr       = ""
-        ge_pa       = ""
-        im_pr_t     = ""
-        im_pr_n     = ""
-        im_pr_v     = ""
-        im_pa_t     = ""
-        im_pa_n     = ""
-        im_pa_v     = ""
+        inf_pr      = "coudre"
+        inf_pa      = "avoir cousu"
+        pa_pr       = "cousant"
+        pa_pa1      = "cousu (u, ue, us, ues)"
+        pa_pa2      = "ayant cousu"
+        ge_pr       = "en cousant"
+        ge_pa       = "en ayant cousu"
+        im_pr_t     = "couds"
+        im_pr_n     = "cousons"
+        im_pr_v     = "cousez"
+        im_pa_t     = "aie cousu"
+        im_pa_n     = "ayons cousu"
+        im_pa_v     = "ayez cousu"
 
-        in_pr_j     = ""
-        in_pr_t     = ""
-        in_pr_il    = ""
-        in_pr_n     = ""
-        in_pr_v     = ""
-        in_pr_ils   = ""
-        in_pc_j     = "ai "
-        in_pc_t     = "as "
-        in_pc_il    = "a "
-        in_pc_n     = "avons "
-        in_pc_v     = "avez "
-        in_pc_ils   = "ont "
-        in_im_j     = ""
-        in_im_t     = ""
-        in_im_il    = ""
-        in_im_n     = ""
-        in_im_v     = ""
-        in_im_ils   = ""
-        in_pqp_j    = "avais "
-        in_pqp_t    = "avais "
-        in_pqp_il   = "avait "
-        in_pqp_n    = "avions "
-        in_pqp_v    = "aviez "
-        in_pqp_ils  = "avaient "
-        in_ps_j     = ""
-        in_ps_t     = ""
-        in_ps_il    = ""
-        in_ps_n     = ""
-        in_ps_v     = ""
-        in_ps_ils   = ""
-        in_pa_j     = "eus "
-        in_pa_t     = "eus "
-        in_pa_il    = "eut "
-        in_pa_n     = "eûmes "
-        in_pa_v     = "eûtes "
-        in_pa_ils   = "eurent "
-        in_fs_j     = ""
-        in_fs_t     = ""
-        in_fs_il    = ""
-        in_fs_n     = ""
-        in_fs_v     = ""
-        in_fs_ils   = ""
-        in_fa_j     = "aurai "
-        in_fa_t     = "auras "
-        in_fa_il    = "aura "
-        in_fa_n     = "aurons "
-        in_fa_v     = "aurez "
-        in_fa_ils   = "auront "
+        in_pr_j     = "couds"
+        in_pr_t     = "couds"
+        in_pr_il    = "coud"
+        in_pr_n     = "cousons"
+        in_pr_v     = "cousez"
+        in_pr_ils   = "cousent"
+        in_pc_j     = "ai cousu"
+        in_pc_t     = "as cousu"
+        in_pc_il    = "a cousu"
+        in_pc_n     = "avons cousu"
+        in_pc_v     = "avez cousu"
+        in_pc_ils   = "ont cousu"
+        in_im_j     = "cousais"
+        in_im_t     = "cousais"
+        in_im_il    = "cousait"
+        in_im_n     = "cousions"
+        in_im_v     = "cousiez"
+        in_im_ils   = "cousaient"
+        in_pqp_j    = "avais cousu"
+        in_pqp_t    = "avais cousu"
+        in_pqp_il   = "avait cousu"
+        in_pqp_n    = "avions cousu"
+        in_pqp_v    = "aviez cousu"
+        in_pqp_ils  = "avaient cousu"
+        in_ps_j     = "cousis"
+        in_ps_t     = "cousis"
+        in_ps_il    = "cousit"
+        in_ps_n     = "cousîmes"
+        in_ps_v     = "cousîtes"
+        in_ps_ils   = "cousirent"
+        in_pa_j     = "eus cousu"
+        in_pa_t     = "eus cousu"
+        in_pa_il    = "eut cousu"
+        in_pa_n     = "eûmes cousu"
+        in_pa_v     = "eûtes cousu"
+        in_pa_ils   = "eurent cousu"
+        in_fs_j     = "coudrai"
+        in_fs_t     = "coudras"
+        in_fs_il    = "coudra"
+        in_fs_n     = "coudrons"
+        in_fs_v     = "coudrez"
+        in_fs_ils   = "coudront"
+        in_fa_j     = "aurai cousu"
+        in_fa_t     = "auras cousu"
+        in_fa_il    = "aura cousu"
+        in_fa_n     = "aurons cousu"
+        in_fa_v     = "aurez cousu"
+        in_fa_ils   = "auront cousu"
 
-        su_pr_j     = ""
-        su_pr_t     = ""
-        su_pr_il    = ""
-        su_pr_n     = ""
-        su_pr_v     = ""
-        su_pr_ils   = ""
-        su_pa_j     = "aie "
-        su_pa_t     = "aies "
-        su_pa_il    = "ait "
-        su_pa_n     = "ayons "
-        su_pa_v     = "ayez "
-        su_pa_ils   = "aient "
-        su_im_j     = ""
-        su_im_t     = ""
-        su_im_il    = ""
-        su_im_n     = ""
-        su_im_v     = ""
-        su_im_ils   = ""
-        su_pqp_j    = "eusse "
-        su_pqp_t    = "eusses "
-        su_pqp_il   = "eût "
-        su_pqp_n    = "eussions "
-        su_pqp_v    = "eussiez "
-        su_pqp_ils  = "eussent "
+        su_pr_j     = "couse"
+        su_pr_t     = "couses"
+        su_pr_il    = "couse"
+        su_pr_n     = "cousions"
+        su_pr_v     = "cousiez"
+        su_pr_ils   = "cousent"
+        su_pa_j     = "aie cousu"
+        su_pa_t     = "aies cousu"
+        su_pa_il    = "ait cousu"
+        su_pa_n     = "ayons cousu"
+        su_pa_v     = "ayez cousu"
+        su_pa_ils   = "aient cousu"
+        su_im_j     = "cousisse"
+        su_im_t     = "cousisses"
+        su_im_il    = "cousît"
+        su_im_n     = "cousissions"
+        su_im_v     = "cousissiez"
+        su_im_ils   = "cousissent"
+        su_pqp_j    = "eusse cousu"
+        su_pqp_t    = "eusses cousu"
+        su_pqp_il   = "eût cousu"
+        su_pqp_n    = "eussions cousu"
+        su_pqp_v    = "eussiez cousu"
+        su_pqp_ils  = "eussent cousu"
 
-        co_pr_j     = ""
-        co_pr_t     = ""
-        co_pr_il    = ""
-        co_pr_n     = ""
-        co_pr_v     = ""
-        co_pr_ils   = ""
-        co_pa_j     = "aurais "
-        co_pa_t     = "aurais "
-        co_pa_il    = "aurait "
-        co_pa_n     = "aurions "
-        co_pa_v     = "auriez "
-        co_pa_ils   = "auraient " />
+        co_pr_j     = "coudrais"
+        co_pr_t     = "coudrais"
+        co_pr_il    = "coudrait"
+        co_pr_n     = "coudrions"
+        co_pr_v     = "coudriez"
+        co_pr_ils   = "coudraient"
+        co_pa_j     = "aurais cousu"
+        co_pa_t     = "aurais cousu"
+        co_pa_il    = "aurait cousu"
+        co_pa_n     = "aurions cousu"
+        co_pa_v     = "auriez cousu"
+        co_pa_ils   = "auraient cousu" />
     <conjugation
         id          = "80"
         term        = ""
-        inf_pr      = ""
-        inf_pa      = ""
-        pa_pr       = ""
-        pa_pa1      = ""
-        pa_pa2      = ""
-        ge_pr       = ""
-        ge_pa       = ""
-        im_pr_t     = ""
-        im_pr_n     = ""
-        im_pr_v     = ""
-        im_pa_t     = ""
-        im_pa_n     = ""
-        im_pa_v     = ""
+        inf_pr      = "moudre"
+        inf_pa      = "avoir moulu"
+        pa_pr       = "moulant"
+        pa_pa1      = "moulu (u, ue, us, ues)"
+        pa_pa2      = "ayant moulu"
+        ge_pr       = "en moulant"
+        ge_pa       = "en ayant moulu"
+        im_pr_t     = "mouds"
+        im_pr_n     = "moulons"
+        im_pr_v     = "moulez"
+        im_pa_t     = "aie moulu"
+        im_pa_n     = "ayons moulu"
+        im_pa_v     = "ayez moulu"
 
-        in_pr_j     = ""
-        in_pr_t     = ""
-        in_pr_il    = ""
-        in_pr_n     = ""
-        in_pr_v     = ""
-        in_pr_ils   = ""
-        in_pc_j     = "ai "
-        in_pc_t     = "as "
-        in_pc_il    = "a "
-        in_pc_n     = "avons "
-        in_pc_v     = "avez "
-        in_pc_ils   = "ont "
-        in_im_j     = ""
-        in_im_t     = ""
-        in_im_il    = ""
-        in_im_n     = ""
-        in_im_v     = ""
-        in_im_ils   = ""
-        in_pqp_j    = "avais "
-        in_pqp_t    = "avais "
-        in_pqp_il   = "avait "
-        in_pqp_n    = "avions "
-        in_pqp_v    = "aviez "
-        in_pqp_ils  = "avaient "
-        in_ps_j     = ""
-        in_ps_t     = ""
-        in_ps_il    = ""
-        in_ps_n     = ""
-        in_ps_v     = ""
-        in_ps_ils   = ""
-        in_pa_j     = "eus "
-        in_pa_t     = "eus "
-        in_pa_il    = "eut "
-        in_pa_n     = "eûmes "
-        in_pa_v     = "eûtes "
-        in_pa_ils   = "eurent "
-        in_fs_j     = ""
-        in_fs_t     = ""
-        in_fs_il    = ""
-        in_fs_n     = ""
-        in_fs_v     = ""
-        in_fs_ils   = ""
-        in_fa_j     = "aurai "
-        in_fa_t     = "auras "
-        in_fa_il    = "aura "
-        in_fa_n     = "aurons "
-        in_fa_v     = "aurez "
-        in_fa_ils   = "auront "
+        in_pr_j     = "mouds"
+        in_pr_t     = "mouds"
+        in_pr_il    = "moud"
+        in_pr_n     = "moulons"
+        in_pr_v     = "moulez"
+        in_pr_ils   = "moulent"
+        in_pc_j     = "ai moulu"
+        in_pc_t     = "as moulu"
+        in_pc_il    = "a moulu"
+        in_pc_n     = "avons moulu"
+        in_pc_v     = "avez moulu"
+        in_pc_ils   = "ont moulu"
+        in_im_j     = "moulais"
+        in_im_t     = "moulais"
+        in_im_il    = "moulait"
+        in_im_n     = "moulions"
+        in_im_v     = "mouliez"
+        in_im_ils   = "moulaient"
+        in_pqp_j    = "avais moulu"
+        in_pqp_t    = "avais moulu"
+        in_pqp_il   = "avait moulu"
+        in_pqp_n    = "avions moulu"
+        in_pqp_v    = "aviez moulu"
+        in_pqp_ils  = "avaient moulu"
+        in_ps_j     = "moulus"
+        in_ps_t     = "moulus"
+        in_ps_il    = "moulut"
+        in_ps_n     = "moulûmes"
+        in_ps_v     = "moulûtes"
+        in_ps_ils   = "moulurent"
+        in_pa_j     = "eus moulu"
+        in_pa_t     = "eus moulu"
+        in_pa_il    = "eut moulu"
+        in_pa_n     = "eûmes moulu"
+        in_pa_v     = "eûtes moulu"
+        in_pa_ils   = "eurent moulu"
+        in_fs_j     = "moudrai"
+        in_fs_t     = "moudras"
+        in_fs_il    = "moudra"
+        in_fs_n     = "moudrons"
+        in_fs_v     = "moudrez"
+        in_fs_ils   = "moudront"
+        in_fa_j     = "aurai moulu"
+        in_fa_t     = "auras moulu"
+        in_fa_il    = "aura moulu"
+        in_fa_n     = "aurons moulu"
+        in_fa_v     = "aurez moulu"
+        in_fa_ils   = "auront moulu"
 
-        su_pr_j     = ""
-        su_pr_t     = ""
-        su_pr_il    = ""
-        su_pr_n     = ""
-        su_pr_v     = ""
-        su_pr_ils   = ""
-        su_pa_j     = "aie "
-        su_pa_t     = "aies "
-        su_pa_il    = "ait "
-        su_pa_n     = "ayons "
-        su_pa_v     = "ayez "
-        su_pa_ils   = "aient "
-        su_im_j     = ""
-        su_im_t     = ""
-        su_im_il    = ""
-        su_im_n     = ""
-        su_im_v     = ""
-        su_im_ils   = ""
-        su_pqp_j    = "eusse "
-        su_pqp_t    = "eusses "
-        su_pqp_il   = "eût "
-        su_pqp_n    = "eussions "
-        su_pqp_v    = "eussiez "
-        su_pqp_ils  = "eussent "
+        su_pr_j     = "moule"
+        su_pr_t     = "moules"
+        su_pr_il    = "moule"
+        su_pr_n     = "moulions"
+        su_pr_v     = "mouliez"
+        su_pr_ils   = "moulent"
+        su_pa_j     = "aie moulu"
+        su_pa_t     = "aies moulu"
+        su_pa_il    = "ait moulu"
+        su_pa_n     = "ayons moulu"
+        su_pa_v     = "ayez moulu"
+        su_pa_ils   = "aient moulu"
+        su_im_j     = "moulusse"
+        su_im_t     = "moulusses"
+        su_im_il    = "moulût"
+        su_im_n     = "moulussions"
+        su_im_v     = "moulussiez"
+        su_im_ils   = "moulussent"
+        su_pqp_j    = "eusse moulu"
+        su_pqp_t    = "eusses moulu"
+        su_pqp_il   = "eût moulu"
+        su_pqp_n    = "eussions moulu"
+        su_pqp_v    = "eussiez moulu"
+        su_pqp_ils  = "eussent moulu"
 
-        co_pr_j     = ""
-        co_pr_t     = ""
-        co_pr_il    = ""
-        co_pr_n     = ""
-        co_pr_v     = ""
-        co_pr_ils   = ""
-        co_pa_j     = "aurais "
-        co_pa_t     = "aurais "
-        co_pa_il    = "aurait "
-        co_pa_n     = "aurions "
-        co_pa_v     = "auriez "
-        co_pa_ils   = "auraient " />
+        co_pr_j     = "moudrais"
+        co_pr_t     = "moudrais"
+        co_pr_il    = "moudrait"
+        co_pr_n     = "moudrions"
+        co_pr_v     = "moudriez"
+        co_pr_ils   = "moudraient"
+        co_pa_j     = "aurais moulu"
+        co_pa_t     = "aurais moulu"
+        co_pa_il    = "aurait moulu"
+        co_pa_n     = "aurions moulu"
+        co_pa_v     = "auriez moulu"
+        co_pa_ils   = "auraient moulu" />
     <conjugation
         id          = "81"
         term        = ""
